[gd_scene load_steps=14 format=2]

[ext_resource path="res://sys/panels/EGControl.gd" type="Script" id=1]
[ext_resource path="res://sys/panels/EGMillisecsInput.gd" type="Script" id=2]
[ext_resource path="res://sys/panels/tuning/FixedFreq.gd" type="Script" id=3]
[ext_resource path="res://gfx/fonts/numerics_5x8.tres" type="BitmapFont" id=4]
[ext_resource path="res://gfx/fonts/NoteFont.tres" type="BitmapFont" id=5]
[ext_resource path="res://gfx/fonts/spelunkid_font.tres" type="BitmapFont" id=6]
[ext_resource path="res://gfx/ui/icon_ratio_x.svg" type="Texture" id=7]
[ext_resource path="res://sys/panels/tuning/RatioPresetButton.gd" type="Script" id=8]
[ext_resource path="res://gfx/ui/icon_tuning.svg" type="Texture" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 8.0
draw_center = false

[sub_resource type="GDScript" id=3]
script/source = "extends VSlider

# Zero snap
func _on_Slider_gui_input(event):
	if event is InputEventMouseButton and !event.pressed:
		if abs(value) < 4:  value = 0

"

[sub_resource type="GDScript" id=4]
script/source = "extends VSlider

# Zero snap
func _on_Slider_gui_input(event):
	if event is InputEventMouseButton and !event.pressed:
		if abs(value) < 3:  value = 0

"

[node name="TuningControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -658.0
margin_bottom = -386.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FixedFreq" type="VBoxContainer" parent="H" groups=[
"setting_group",
]]
margin_right = 117.0
margin_bottom = 242.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="FixedFreq" type="Label" parent="H/FixedFreq"]
margin_right = 117.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 6 )
text = "
 Fixed
 Frequency:"
valign = 3

[node name="chkFixed" type="CheckButton" parent="H/FixedFreq"]
margin_top = 34.0
margin_right = 117.0
margin_bottom = 74.0

[node name="Separator" type="Panel" parent="H/FixedFreq"]
margin_top = 78.0
margin_right = 117.0
margin_bottom = 79.0
rect_min_size = Vector2( 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blanker2" type="Panel" parent="H/FixedFreq"]
margin_top = 83.0
margin_right = 117.0
margin_bottom = 91.0
rect_min_size = Vector2( 0, 8 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lbl2" type="Label" parent="H/FixedFreq"]
margin_top = 95.0
margin_right = 117.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 6 )
text = " Base Hz:"

[node name="txtHz" type="SpinBox" parent="H/FixedFreq"]
margin_top = 107.0
margin_right = 117.0
margin_bottom = 131.0
rect_min_size = Vector2( 0, 20 )
max_value = 22050.0
exp_edit = true
allow_greater = true
align = 1
suffix = "Hz"

[node name="Blanker" type="Panel" parent="H/FixedFreq"]
margin_top = 135.0
margin_right = 117.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 8 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lbl" type="Label" parent="H/FixedFreq"]
margin_top = 147.0
margin_right = 117.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 6 )
text = "Presets:"
align = 1

[node name="Presets" type="OptionButton" parent="H/FixedFreq"]
margin_top = 159.0
margin_right = 117.0
margin_bottom = 177.0
custom_fonts/font = ExtResource( 5 )
text = "A-4"

[node name="Blanker3" type="Panel" parent="H/FixedFreq"]
margin_top = 181.0
margin_right = 117.0
margin_bottom = 189.0
rect_min_size = Vector2( 0, 8 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator2" type="Panel" parent="H/FixedFreq"]
margin_top = 193.0
margin_right = 117.0
margin_bottom = 194.0
rect_min_size = Vector2( 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blanker4" type="Panel" parent="H/FixedFreq"]
margin_top = 198.0
margin_right = 117.0
margin_bottom = 206.0
rect_min_size = Vector2( 0, 8 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ratios" type="Button" parent="H/FixedFreq"]
margin_top = 210.0
margin_right = 117.0
margin_bottom = 242.0
rect_min_size = Vector2( 0, 32 )
text = "Ratio Presets"
icon = ExtResource( 9 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pop" type="PopupDialog" parent="H/FixedFreq/Ratios"]
visible = true
margin_left = 646.0
margin_top = -106.0
margin_right = 1024.0
margin_bottom = 153.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="H/FixedFreq/Ratios/Pop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -7.99998
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 8
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="0" type="Button" parent="H/FixedFreq/Ratios/Pop/Grid"]
margin_right = 45.0
margin_bottom = 243.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "0.71"
align = 0
script = ExtResource( 8 )

[node name="Seperator" type="PanelContainer" parent="H"]
margin_left = 121.0
margin_right = 130.0
margin_bottom = 242.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="H/Seperator"]
margin_left = 8.0
margin_right = 9.0
margin_bottom = 242.0
rect_min_size = Vector2( 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mul" type="VBoxContainer" parent="H" groups=[
"slider",
]]
margin_left = 134.0
margin_right = 251.0
margin_bottom = 242.0
size_flags_horizontal = 3

[node name="MUL" type="Label" parent="H/Mul"]
margin_right = 117.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 6 )
text = "Mult"
align = 1

[node name="Slider" type="VSlider" parent="H/Mul"]
margin_top = 12.0
margin_right = 117.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 16.0
step = 0.5
allow_greater = true
tick_count = 17
ticks_on_borders = true

[node name="Val" type="Label" parent="H/Mul"]
margin_top = 234.0
margin_right = 117.0
margin_bottom = 242.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 1
valign = 2
script = ExtResource( 2 )
positive_only = true
disable_step = true

[node name="Popup" type="PopupPanel" parent="H/Mul/Val"]
visible = true
margin_left = 62.0
margin_top = 12.0
margin_right = 181.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="LineEdit" parent="H/Mul/Val/Popup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 115.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 6 )
custom_colors/selection_color = Color( 0.0784314, 0, 0.980392, 0.501961 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.690196, 0.690196, 0.690196, 1 )
text = "1.0"
align = 2
max_length = 6
right_icon = ExtResource( 7 )
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dt2" type="VBoxContainer" parent="H" groups=[
"slider",
]]
margin_left = 255.0
margin_right = 372.0
margin_bottom = 242.0
size_flags_horizontal = 3

[node name="DT2" type="Label" parent="H/Dt2"]
margin_right = 117.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 6 )
text = "Semitone"
align = 1

[node name="Slider" type="VSlider" parent="H/Dt2"]
margin_top = 12.0
margin_right = 117.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -12.0
max_value = 12.0
tick_count = 13
ticks_on_borders = true

[node name="Val" type="Label" parent="H/Dt2"]
margin_top = 234.0
margin_right = 117.0
margin_bottom = 242.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 1
valign = 2

[node name="Dt" type="VBoxContainer" parent="H" groups=[
"slider",
]]
margin_left = 376.0
margin_right = 493.0
margin_bottom = 242.0
size_flags_horizontal = 3

[node name="DT" type="Label" parent="H/Dt"]
margin_right = 117.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 6 )
text = "Detune"
align = 1

[node name="Slider" type="VSlider" parent="H/Dt"]
margin_top = 12.0
margin_right = 117.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -200.0
max_value = 200.0
tick_count = 21
ticks_on_borders = true
script = SubResource( 3 )

[node name="Val" type="Label" parent="H/Dt"]
margin_top = 234.0
margin_right = 117.0
margin_bottom = 242.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 1
valign = 2

[node name="Separator2" type="Panel" parent="H"]
margin_left = 497.0
margin_right = 498.0
margin_bottom = 242.0
rect_min_size = Vector2( 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PMD" type="VBoxContainer" parent="H"]
margin_left = 502.0
margin_right = 622.0
margin_bottom = 242.0
size_flags_horizontal = 3

[node name="PitchSlide" type="Label" parent="H/PMD"]
margin_right = 120.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 6 )
text = "LFO PitchMod"
align = 1

[node name="Slider" type="VSlider" parent="H/PMD"]
margin_top = 12.0
margin_right = 120.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -100.0
tick_count = 21
ticks_on_borders = true
script = SubResource( 4 )

[node name="Val" type="Label" parent="H/PMD"]
margin_top = 234.0
margin_right = 120.0
margin_bottom = 242.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 1
valign = 2

[node name="TODO" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_right = 74.0
text = "Mult"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="H/FixedFreq/chkFixed" to="H/FixedFreq" method="_on_chkFixed_toggled"]
[connection signal="value_changed" from="H/FixedFreq/txtHz" to="H/FixedFreq" method="_on_txtHz_value_changed"]
[connection signal="item_selected" from="H/FixedFreq/Presets" to="H/FixedFreq" method="_on_Presets_item_selected"]
[connection signal="pressed" from="H/FixedFreq/Presets" to="H/FixedFreq" method="_on_Presets_pressed"]
[connection signal="pressed" from="H/FixedFreq/Ratios" to="H/FixedFreq" method="_on_Ratios_pressed"]
[connection signal="gui_input" from="H/Dt/Slider" to="H/Dt/Slider" method="_on_Slider_gui_input"]
[connection signal="gui_input" from="H/PMD/Slider" to="H/PMD/Slider" method="_on_Slider_gui_input"]
